# lfsr

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
base/: CHANGELOG.md  Cargo.toml
base/src/: lib.rs
instances/: CHANGELOG.md  Cargo.toml
instances/src/: galois.rs  lib.rs
lfsr/: CHANGELOG.md  Cargo.toml
lfsr/src/: lib.rs
macro-generate/: CHANGELOG.md  Cargo.toml
macro-generate/src/: lib.rs
macro-lookup/: CHANGELOG.md  Cargo.toml
macro-lookup/src/: lib.rs
