[package]
name = "lfsr"
version = "0.2.0"
authors = ["Ilya Epifanov <elijah.epifanov@gmail.com>"]
edition = "2018"
keywords = ["embedded", "no-std", "math", "testing"]
categories = ["embedded", "no-std"]
description = "Galois linear feedback shift registers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ilya-epifanov/lfsr"

[dependencies]
lfsr-base = { version = "0.2.0", path = "../base" }
lfsr-instances = { version = "0.2.0", path = "../instances" }
lfsr-macro-generate = { version = "0.2.0", path = "../macro-generate" }
lfsr-macro-lookup = { version = "0.2.0", path = "../macro-lookup" }
